# documentation/swagger.yml
@@ -1470,26 +1470,25 @@
         description: Get exports status
         parameters:
         - $ref: "#/parameters/header_authorization"
-        - $ref: "#/parameters/header_coverage"
         - $ref: "#/parameters/header_customer_id"
-        - $ref: "#/parameters/header_contributors"
         tags:
           - Export
         responses:
           200:
             description: List of exports status
             schema:
-              type: array
-              items:
-                $ref: "#/definitions/impacts_exports_status"
-    /impacts/export:
+              type: object
+              properties:
+                exports:
+                  type: array
+                  items:
+                    $ref: "#/definitions/impacts_exports_status"
+    /impacts/exports:
       post:
         description: Create archive file export
         parameters:
         - $ref: "#/parameters/header_authorization"
-        - $ref: "#/parameters/header_coverage"
         - $ref: "#/parameters/header_customer_id"
-        - $ref: "#/parameters/header_contributors"
         - in: body
           name: body
           description: Date range filters
@@ -1506,14 +1505,38 @@
             description: Bad request
             schema:
               $ref: "#/definitions/error_occured"
-    /impacts/export/{id}:
+    /impacts/exports/{id}:
+      get:
+        description: Get the status of one export
+        parameters:
+        - $ref: "#/parameters/header_authorization"
+        - $ref: "#/parameters/header_customer_id"
+        - name: id
+          in: path
+          description: identifier
+          required: true
+          type: "string"
+          format: "uuid"
+        tags:
+          - Export
+        responses:
+          200:
+            description: Export status
+            schema:
+              type: object
+              properties:
+                export:
+                  $ref: "#/definitions/impacts_exports_status"
+          404:
+            description: Not found
+            schema:
+              $ref: "#/definitions/error_404"
+    /impacts/exports/{id}/download:
       get:
         description: Returns the archive file based ID
         parameters:
         - $ref: "#/parameters/header_authorization"
-        - $ref: "#/parameters/header_coverage"
         - $ref: "#/parameters/header_customer_id"
-        - $ref: "#/parameters/header_contributors"
         - name: id
           in: path
           description: identifier
@@ -1527,6 +1550,10 @@
         responses:
           200:
             description: Archive file
+          404:
+            description: Not found
+            schema:
+              $ref: "#/definitions/error_404"
 
   ################################################################################
   #                                 Parameters                                  #
@@ -2931,6 +2958,3 @@
           type: "string"
           pattern: "^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}Z$"
           example: "2019-03-01T23:59:59Z"
-        url:
-          type: string
-          description: URL of archive file
